2013-06-07  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php: Fixed CSV and RSS links
	from submenu setting the default filters: 8 hours, 
	pagination of 20, etc.

	* operation/agentes/status_monitor.php: Added All option
	to the group filter in monitor view and other little fixes

2013-06-07 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: fixed the link of the
	image in the first page into the PDF reports.

2013-06-07  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/plugin.php: Fixed disabled textarea
	of macros help in plugin form

2013-06-07 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php,
	godmode/agentes/configurar_agente.php: fixed the link of
	pagination.
	
	Fixes: #2250

2013-06-07  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/module.php
	include/javascript/jquery.ui.datepicker.js
	operation/tree.php
	operation/agentes/datos_agente.php: Added range filter 
	to raw data view in tree view

	* operation/netflow/nf_live_view.php: Fix help popup
	in metaconsole view

2013-06-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Replaced netflow and
	visual console flags updation in setup by a new customize
	sections values

	* include/config_process.php: Added specific metaconsole
	autorefresh whitelisted sections

	* extensions/snmp_explorer.php: Change wrong 
	snmp branch in interfaces explorer

2013-06-06  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php: Fix the info of the
	user that validate a event in the event info that
	is showed when click on a event on interactive graphs

	* include/gettext.php: Add a hack to fix the languages change
	on certain machines, like TSOL one.

	* operation/events/events.build_table.php: Add a "access node"
	control to column server name

	* operation/agentes/status_monitor.php
	* general/header.php: Add disable possibility in autorefresh combo
